@@ -271,6 +271,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon   BJC S630   (EXPERIMENTAL)
        Canon   BJC S750   (EXPERIMENTAL)
        Canon   BJC S820   (EXPERIMENTAL)
+       Canon   BJC S830D  (EXPERIMENTAL)
        Canon PIXMA i50    (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i250   (EXPERIMENTAL)
